--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="right">
       <h1>Build The Community<br> Your Fans Will Love</h1>
       <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
-      <button><a href="#">Register</a></button> 
+      <button href="#">Register</button> 
     </div>
   </main>
 
